--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,18 @@
 *.exe
 *.out
 *.app
+
+assignment1
+CMakeFiles
+CMakeCache.txt
+Todo
+Makefile
+cmake_install.cmake
+*.tga
+heightMaps/Readme_HeightMaps.pdf
+!images/snow_m.tga
+!images/rocks.tga
+!images/water01.tga
+!images/grass02.tga
+!heightMaps/Terrain_hm_01.tga
+!heightMaps/Terrain_hm_03.tga
