--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,7 @@ heightMaps/Readme_HeightMaps.pdf
 !images/grass02.tga
 !heightMaps/Terrain_hm_01.tga
 !heightMaps/Terrain_hm_03.tga
+Report.odt
+Cosc422Assign1blb38.zip
+Report.pdf
+submission
